--- a/website/config/gh-pages/config.yaml
+++ b/website/config/gh-pages/config.yaml
@@ -1,2 +1,2 @@
-baseURL: https://simplon-naq-devops.github.io/stopify-landing-page/
+baseURL: https://hervedevops.github.io/stopify-landing-page/
 title: Stopify - GitHub Pages
